--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "page-outline",
-  "description": "A browser extension for generating and displaying page outlines",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "wxt",
-    "dev:firefox": "wxt -b firefox",
-    "build": "wxt build",
-    "build:firefox": "wxt build -b firefox",
-    "zip": "wxt zip",
-    "zip:firefox": "wxt zip -b firefox",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "postinstall": "wxt prepare"
-  },
-  "devDependencies": {
-    "@tsconfig/svelte": "^5.0.6",
-    "@wxt-dev/module-svelte": "^2.0.4",
-    "svelte": "^5.46.0",
-    "svelte-check": "^4.3.4",
-    "tslib": "^2.8.1",
-    "typescript": "^5.9.3",
-    "wxt": "^0.20.6"
-  }
+	"name": "page-outline",
+	"description": "manifest.json description",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "wxt",
+		"dev:firefox": "wxt -b firefox",
+		"build": "wxt build",
+		"build:firefox": "wxt build -b firefox",
+		"zip": "wxt zip",
+		"zip:firefox": "wxt zip -b firefox",
+		"typecheck": "tsc --noEmit",
+		"lint": "biome check .",
+		"lint:fix": "biome check --write .",
+		"format": "biome format --write .",
+		"format:check": "biome format .",
+		"check": "run-p typecheck lint",
+		"check:fix": "run-s lint:fix format",
+		"postinstall": "wxt prepare"
+	},
+	"dependencies": {
+		"react": "^19.2.3",
+		"react-dom": "^19.2.3"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"@wxt-dev/module-react": "^1.1.5",
+		"npm-run-all": "^4.1.5",
+		"typescript": "^5.9.3",
+		"wxt": "^0.20.6"
+	}
 }
